--- a/ttb_app/templates/board.html
+++ b/ttb_app/templates/board.html
@@ -15,10 +15,10 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm">
-      One of three columns
+      Big Board: {{board}}
     </div>
-    <div class="col-sm">
-      One of three columns
+    <div class="col-md">
+      Lil Board: {{board.little_board_state}}
     </div>
     <div class="col-sm">
       One of three columns
